Aligned the box to avoid scrolling

--- a/Sprint-3/quote-generator/style.css
+++ b/Sprint-3/quote-generator/style.css
@@ -3,7 +3,7 @@ body {
     background-color: brown;
     font-family: "Bad Script";
     color: darkolivegreen;
-    height: auto;
+    height: 100vh;
     margin: 0;
     display: flex;
     justify-content: center;
@@ -36,7 +36,7 @@ body {
 
 .container {
     background-color: burlywood;
-    padding: 48px, 32px, 32px, 32px;
+    padding: 48px 32px 32px 32px;
     text-align: center;
     border-radius: 16px;
     box-shadow: 0 6px 24px rgba(60, 40, 20, 0.1);
